--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "test": "npm run lint && npm run test:js",
     "test:js": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require babel-polyfill",
-    "test:js:watch": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require babel-polyfill --watch"
+    "test:js:watch": "./node_modules/mocha/bin/mocha --compilers js:babel-register --require babel-polyfill --watch --recursive"
   },
   "homepage": "",
   "bugs": {
@@ -35,6 +35,7 @@
     "eslint-config-airbnb": "6.2.0",
     "eslint-config-esayemm": "^0.1.2",
     "eslint-plugin-react": "4.3.0",
+    "expect": "^1.20.2",
     "mocha": "2.4.5",
     "should": "8.3.0"
   },
@@ -42,8 +43,11 @@
     "app-module-path": "1.0.6",
     "babel-polyfill": "6.7.4",
     "babel-register": "6.7.2",
+    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "cors": "^2.7.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "invariant": "^2.2.1",
+    "redis": "^2.6.2"
   }
 }
