--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  "presets": ["stage-0", "es2015"],
+  "presets": ["es2015", "stage-0", "react"],
   "plugins": [
+    "transform-runtime",
     "transform-class-properties"
   ]
 }
