--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "6.7.6",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-stage-0": "6.5.0",
     "eslint": "2.7.0",
@@ -42,15 +43,21 @@
   "dependencies": {
     "app-module-path": "1.0.6",
     "babel-polyfill": "6.7.4",
+    "babel-preset-react": "^6.11.1",
     "babel-register": "6.7.2",
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
     "express": "^4.14.0",
     "invariant": "^2.2.1",
+    "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.3",
     "node-uuid": "^1.4.7",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "react-router": "^2.5.2",
     "redis": "^2.6.2"
   }
 }
