--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
     "express": "^4.14.0",
+    "express-last-error-handler": "^0.1.3",
     "invariant": "^2.2.1",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.5.3",
