--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "test": "NODE_ENV=test npm run lint && npm run test:js",
     "test:js": "NODE_ENV=test ./node_modules/mocha/bin/mocha --compilers js:babel-register --require babel-polyfill --recursive",
-    "test:js:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --compilers js:babel-register --require babel-polyfill --watch --recursive"
+    "test:js:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --compilers js:babel-register --require babel-polyfill --watch --recursive",
+    "deploy": "./node_modules/kontinuum-deploy/bin/kontinuum_deploy --input ./deploy/accounts.yaml.tpl --output ./deploy/accounts.yaml --service accounts"
   },
   "homepage": "",
   "bugs": {
@@ -37,6 +38,7 @@
     "eslint-config-esayemm": "^0.1.2",
     "eslint-plugin-react": "4.3.0",
     "expect": "^1.20.2",
+    "kontinuum-deploy": "^0.3.1",
     "mocha": "2.4.5",
     "should": "8.3.0"
   },
