--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
-  "version": "0.0.0",
-  "description": "",
+  "name": "accounts",
+  "version": "0.1.0",
+  "description": "Accounts backend",
   "main": "index.js",
   "scripts": {
     "postversion": "git push && git push --tags && npm publish",
@@ -19,12 +19,9 @@
     "type": "git",
     "url": ""
   },
-  "author": "",
+  "author": "Sam Lau <esayemm@gmail.com>",
   "license": "ISC",
   "preferGlobal": "true",
-  "bin": {
-    "": "index.js"
-  },
   "devDependencies": {
     "axios": "^0.12.0",
     "babel-core": "6.7.6",
