--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: node_js
 node_js:
   - "6.1"
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
 services:
   - mongodb
   - redis-server
@@ -11,6 +18,7 @@ env:
   - MONGO_URL=mongodb://localhost:27017/accounts_test
   - REDIS_HOST=localhost
   - REDIS_PORT=6379
+  - CXX=g++-4.8
 
 cache:
   directories:
