--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,7 @@ services:
   - redis-server
 
 env:
-  - NODE_ENV=travis
-  - MONGO_URL=mongodb://localhost:27017/accounts_test
-  - REDIS_HOST=localhost
-  - REDIS_PORT=6379
+  - NODE_ENV=travis MONGO_URL=mongodb://localhost:27017/accounts_test REDIS_HOST=localhost REDIS_PORT=6379
 
 cache:
   directories:
