try to get mongo and docker working in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,23 @@ node_js:
 sudo: required
 
 services:
-  - mongodb
+  - docker
   - redis-server
 
 env:
-  - NODE_ENV=travis MONGO_URL=mongodb://localhost:27017/accounts_test REDIS_HOST=localhost REDIS_PORT=6379
+  - MONGODB_VERSION=2.6.10 NODE_ENV=travis MONGO_URL=mongodb://localhost:27017/accounts_test REDIS_HOST=localhost REDIS_PORT=6379
 
 cache:
   directories:
     - node_modules
+
+before_install:
+  - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - tar xfz mongodb-linux-x86_64-$MONGODB_VERSION.tgz
+  - export PATH=`pwd`/mongodb-linux-x86_64-$MONGODB_VERSION/bin:$PATH
+  - mkdir -p data/db
+  - mongod --dbpath=data/db &
+  - sleep 3
 
 install:
   - npm install
