--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express-last-error-handler": "^0.1.3",
     "invariant": "^2.2.1",
     "jsonwebtoken": "^7.0.1",
+    "kontinuum-deploy": "^0.3.2",
     "mongoose": "^4.5.3",
     "node-uuid": "^1.4.7",
     "react": "^15.2.0",
